Fixed the layout issue whenever the height goes lower than 800px and when the width is also less than 800px.
I simply updated the media query and removed "(orientation: portrait)" from @media screen and (min-width:451px) and (max-width:800px) and (orientation: portrait) and it fixed the problem.

I will also attatch a screenshot of the issue for this update.

--- a/styles/_tablet-display.scss
+++ b/styles/_tablet-display.scss
@@ -1,4 +1,4 @@
-@media screen and (min-width:451px) and (max-width:800px) and (orientation: portrait) {
+@media screen and (min-width:451px) and (max-width:800px) {
 
     .container {
         width: 100%;
