--- a/styles/style.css
+++ b/styles/style.css
@@ -873,7 +873,7 @@ h4 {
     display: none;
   }
 }
-@media screen and (min-width: 451px) and (max-width: 800px) and (orientation: portrait) {
+@media screen and (min-width: 451px) and (max-width: 800px) {
   .container {
     width: 100%;
     display: flex;
@@ -1286,12 +1286,12 @@ h4 {
     margin-bottom: 0.25em;
   }
 }
-@media screen and (min-width: 451px) and (max-width: 800px) and (orientation: portrait) and (max-width: 210px) {
+@media screen and (min-width: 451px) and (max-width: 800px) and (max-width: 210px) {
   .container #contact.contact h3 {
     word-break: break-all;
   }
 }
-@media screen and (min-width: 451px) and (max-width: 800px) and (orientation: portrait) {
+@media screen and (min-width: 451px) and (max-width: 800px) {
   .container #contact.contact h3:first-of-type {
     padding: 0em 0.5em;
   }
@@ -1462,12 +1462,12 @@ h4 {
     min-width: 40px;
   }
 }
-@media screen and (min-width: 451px) and (max-width: 800px) and (orientation: portrait) and (max-width: 335px) {
+@media screen and (min-width: 451px) and (max-width: 800px) and (max-width: 335px) {
   .container #contact.contact .contact-container .contact-me .contact-links .business-email .my-email {
     word-break: break-all;
   }
 }
-@media screen and (min-width: 451px) and (max-width: 800px) and (orientation: portrait) {
+@media screen and (min-width: 451px) and (max-width: 800px) {
   .container #contact.contact .contact-container .contact-me .contact-links .business-email .my-email {
     padding: 1em;
   }
